fix: fix articles context menu on mobile

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -29,6 +29,13 @@
 	}
 }
 
+@layer components {
+	/** Disable the iOS context menu */
+	.no-callout {
+		-webkit-touch-callout: none;
+	}
+}
+
 *:focus {
 	outline: none;
 }
